f5/1.yaml
apiVersion: v1
kind: Service
metadata:
  name: mydns-tcp
  labels:
    app: mydns
spec:
  selector:
    app-a: mydns-tcp
  type: NodePort
  externalTrafficPolicy: Local
  ports:
  - name: domain-tcp
    protocol: TCP
    port: 53
    targetPort: 53
