f5/ingress-tcp.yaml
apiVersion: v1
kind: Service
metadata:
  name: ingress-nginx-tcp
  namespace: ingress-nginx
spec:
  type: NodePort
  selector:
    app.kubernetes.io/name: ingress-nginx
    app.kubernetes.io/part-of: ingress-nginx
  ports:
  - name: tcp
    port: 53
    targetPort: 53
    protocol: TCP
    nodePort: 30053
