f5/ingress-udp.yaml
apiVersion: v1
kind: Service
metadata:
  name: ingress-nginx-udp
  namespace: ingress-nginx
spec:
  type: NodePort
  selector:
    app.kubernetes.io/name: ingress-nginx
    app.kubernetes.io/part-of: ingress-nginx
  ports:
  - name: udp
    port: 53
    targetPort: 53
    protocol: UDP
    nodePort: 30153
