f5/yuchunyun.yaml
###################################
apiVersion: v1
kind: Service
metadata:
  name: yuchunyun
  namespace: default
  labels:
    app: yuchunyun
spec:
  selector:
    app: yuchunyun
  type: NodePort
  externalTrafficPolicy: Local
  ports:
  - name: http
    port: 8080
    targetPort: 80
---
###################################
apiVersion: apps/v1
kind: Deployment
metadata:
  name: deploy-yuchunyun
  namespace: default
spec:
  replicas: 3
  selector:
    matchLabels:
      app: yuchunyun
  template:
    metadata:
      name: deploy-yuchunyun
      labels:
        app: yuchunyun
    spec:
      containers:
      - name: yuchunyun
        image: ikubernetes/myapp:v4
        ports:
        - name: http
          containerPort: 80
