f5/ingress-conf.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: ingress-myapp
  namespace: default
  annotations:
    kubernetes.io/ingress.class: "nginx"
spec:
  rules:
  - host: myapp.notyun.com
    http:
      paths:
      - path: /
        backend:
          serviceName: svc-myapp
          servicePort: 80
